core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@malformed_cfg.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Failed to parse diplomat::cfg
In src/ast/snapshots/span_testing/malformed_cfg.rs:3:21:
...:cfg(;)]...
        ^
CFG portion of #[diplomat::attr] fails to parse
